chore: Adopt SequencedCollection
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>